# uv-issue-repo

./: README.md  pyproject.toml
simple-package-working/: main.py  pyproject.toml
workspace-not-working/: pyproject.toml
workspace-not-working/subexample/: pyproject.toml
