[project]
name = "root-project"
version = "0.0.1"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
  "package1"
]

[tool.uv.sources]
package1 = [
  { workspace = true },
]

[tool.uv]
find-links = [
  "https://storage.googleapis.com/libtpu-releases/index.html",
]


[tool.uv.workspace]
members = ["packages/*"]


